Fixed questions cut off between columns in FAQ

--- a/css/style.css
+++ b/css/style.css
@@ -177,20 +177,32 @@ hr {
 
 #faq dl, dd, dt {
   text-align: left;
-  margin: 10px 0 10px 0;
+  margin: 0 0 0 0;
   font-size: 1em;
 
 }
 
-#faq dl {
-  columns: 2;
-}
-
 
 #faq dt {
-  padding-bottom: 5px;
+  padding-top: 1px;
+  padding-bottom:1px;
   font-size: 1.125em;
   font-weight: 700;
+}
+
+.wrap {
+  width: 100%;
+  margin: 0 auto;
+}
+
+.leftcol {
+  float: left;
+  width:45%;
+}
+
+.rightcol {
+  float:right;
+  width:45%;
 }
 
 #sponsor {
